k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  namespace: self-healing
spec:
  selector:
    app: fastapi-app

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000

  type: ClusterIP
